--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.appledash</groupId>
-    <artifactId>lwjgltest</artifactId>
+    <artifactId>GLPong</artifactId>
     <version>0.1.1-SNAPSHOT</version>
 
     <repositories>
